force-app/main/default/objects/GF_Lead__c/GF_Lead__c.object-meta.xml
<CustomObject>
    <label>GF Lead</label>
    <nameField>
        <displayFormat>GFLD{000000000}</displayFormat>
        <label>GF Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GF Leads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>