force-app/main/default/objects/GF_Lead__c/fields/adgroup__c.field-meta.xml
<CustomField>
    <fullName>adgroup__c</fullName>
    <label>adgroup</label>
    <length>50</length>
    <type>Text</type>
</CustomField>