force-app/main/default/objects/GF_Lead__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>