force-app/main/default/objects/GF_Lead__c/fields/Company_Invite_Token__c.field-meta.xml
<CustomField>
    <fullName>Company_Invite_Token__c</fullName>
    <label>Company Invite Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>