force-app/main/default/objects/GF_Lead__c/fields/External_Accountant_Email__c.field-meta.xml
<CustomField>
    <fullName>External_Accountant_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Accountant Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>