force-app/main/default/objects/GF_Lead__c/fields/HI_Interest__c.field-meta.xml
<CustomField>
    <fullName>HI_Interest__c</fullName>
    <label>HI Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>