force-app/main/default/objects/GF_Lead__c/fields/HI_Status__c.field-meta.xml
<CustomField>
    <fullName>HI_Status__c</fullName>
    <label>HI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>interested_in_group_hi</fullName>
            </value>
            <value>
                <fullName>has_group_hi</fullName>
            </value>
            <value>
                <fullName>not_interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>