force-app/main/default/objects/GF_Lead__c/fields/No_Clients_Payroll__c.field-meta.xml
<CustomField>
    <fullName>No_Clients_Payroll__c</fullName>
    <description>Associated with &quot;No. of payroll service clients&quot; Accountant survey question. This is an average calculated from a range that the client responds with.</description>
    <label>Total Business Clients (with Payroll)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>