force-app/main/default/objects/GF_Lead__c/fields/No_Firm_Employees__c.field-meta.xml
<CustomField>
    <fullName>No_Firm_Employees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># Firm Employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>