force-app/main/default/objects/GF_Lead__c/fields/No_Of_Clients__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Clients__c</fullName>
    <label>No Of Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>