force-app/main/default/objects/GF_Lead__c/fields/No_of_Clients_Bucket__c.field-meta.xml
<CustomField>
    <fullName>No_of_Clients_Bucket__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># of Clients Bucket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>