force-app/main/default/objects/GF_Lead__c/fields/Partner_Program_Request_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Request_Create_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Program Request Create Date</label>
    <type>DateTime</type>
</CustomField>