force-app/main/default/objects/GF_Lead__c/fields/Payroll_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Relationship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payroll Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>