force-app/main/default/objects/GF_Lead__c/fields/Potential_Fraud__c.field-meta.xml
<CustomField>
    <fullName>Potential_Fraud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Lead is currently flagged as Potential Fraud.</description>
    <label>Potential Fraud</label>
    <type>Checkbox</type>
</CustomField>