force-app/main/default/objects/GF_Lead__c/fields/Pre_onboarding_Desired_First_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_onboarding_Desired_First_Pay_Date__c</fullName>
    <description>Sent from product from the discovery table from the pre-payroll question set.
https://jira.gustocorp.com/browse/GWTH-1987</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre onboarding - Desired First Pay Date</label>
    <type>Date</type>
</CustomField>