force-app/main/default/objects/GF_Lead__c/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pricing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>