force-app/main/default/objects/GF_Lead__c/fields/Processing_Result__c.field-meta.xml
<CustomField>
    <fullName>Processing_Result__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Processing Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>