force-app/main/default/objects/GF_Lead__c/fields/Promo__c.field-meta.xml
<CustomField>
    <fullName>Promo__c</fullName>
    <label>Promo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>