force-app/main/default/objects/GF_Lead__c/fields/Referral_Token__c.field-meta.xml
<CustomField>
    <fullName>Referral_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referrer Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>