force-app/main/default/objects/GF_Lead__c/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referred By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>