force-app/main/default/objects/GF_Lead__c/fields/Referred_By_Accounting_Firm_Id__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Accounting_Firm_Id__c</fullName>
    <label>Referred By Accounting Firm Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>