force-app/main/default/objects/GF_Lead__c/fields/Referring_Url__c.field-meta.xml
<CustomField>
    <fullName>Referring_Url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referring Url</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>