force-app/main/default/objects/GF_Lead__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>