force-app/main/default/objects/GF_Lead__c/fields/Signup_Interest_Page__c.field-meta.xml
<CustomField>
    <fullName>Signup_Interest_Page__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signup Interest Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>