force-app/main/default/objects/GF_Lead__c/fields/Sold_By__c.field-meta.xml
<CustomField>
    <fullName>Sold_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sold By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>