force-app/main/default/objects/GF_Lead__c/fields/Trk_creative__c.field-meta.xml
<CustomField>
    <fullName>Trk_creative__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trk creative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>