force-app/main/default/objects/GF_Lead__c/fields/Trk_Device_c__c.field-meta.xml
<CustomField>
    <fullName>Trk_Device_c__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trk_Device__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>