force-app/main/default/objects/GF_Lead__c/fields/Trk_network__c.field-meta.xml
<CustomField>
    <fullName>Trk_network__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trk network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>