force-app/main/default/objects/GF_Lead__c/fields/Trk_UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>Trk_UTM_Medium__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trk UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>