force-app/main/default/objects/GF_Lead__c/fields/Visitor_Id__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Id__c</fullName>
    <label>Visitor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>