force-app/main/default/objects/GF_Lead__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Partner Firm Website URL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>