force-app/main/default/objects/GF_Lead__c/fields/ZP_Legacy_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>ZP_Legacy_Lead_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ZP Legacy Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>